app/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
spec:
  hosts:
    - arch.homework
  http:
    - route:
        - destination:
            host: proxy-app-1.default.svc.cluster.local
          weight: 50
        - destination:
            host: proxy-app-2.default.svc.cluster.local
          weight: 50
  gateways:
    - arch-homework-gwy
